# FVM-Airidynamic-Simulator

./: .gitignore  CMakeLists.txt  README.md
docs/: 串流功能规划与实现文档.md  串流数据流整理.md  云游戏功能改造.md  数据流整理.md  求解器实现日志.md  项目物理原理规划.md
src/: main.cpp  solver.cu  web_server.cpp  web_server.h
src/include/: solver.cuh
src/include/streaming/: frame_capture.h  input_handler.h  nvenc_encoder.h  stream_server.h
src/streaming/: frame_capture.cpp  frame_capture.h  input_handler.cpp  nvenc_api.h  nvenc_encoder.cpp  nvenc_encoder.h  stream_server.cpp  stream_server.h
src/test/: kernel_benchmark.cu
src/web/: index.html  stream.js
